# coreferee

./: pyproject.toml  setup.cfg
coreferee/lang/en/: config.cfg
